err/artagger.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/artagger'...
Listing './lib/python3.5/site-packages/artagger/InitialTagger'...
Compiling './lib/python3.5/site-packages/artagger/InitialTagger/InitialTagger.py'...
Compiling './lib/python3.5/site-packages/artagger/InitialTagger/__init__.py'...
Listing './lib/python3.5/site-packages/artagger/Models'...
Listing './lib/python3.5/site-packages/artagger/Models/MORPH'...
Listing './lib/python3.5/site-packages/artagger/Models/POS'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Ancient_Greek'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Ancient_Greek-PROIEL'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Arabic'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Basque'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Bulgarian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Catalan'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Chinese'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Croatian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Czech'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Czech-CAC'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Czech-CLTT'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Danish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Dutch'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Dutch-LassySmall'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_English'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_English-LinES'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Estonian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Finnish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Finnish-FTB'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_French'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Galician'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_German'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Gothic'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Greek'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Hebrew'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Hindi'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Hungarian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Indonesian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Irish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Italian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Kazakh'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Latin'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Latin-ITTB'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Latin-PROIEL'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Latvian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Norwegian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Old_Church_Slavonic'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Persian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Polish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Portuguese'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Portuguese-BR'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Romanian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Russian-SynTagRus'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Slovenian'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Slovenian-SST'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Spanish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Spanish-AnCora'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Swedish'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Swedish-LinES'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Tamil'...
Listing './lib/python3.5/site-packages/artagger/Models/UniPOS/UD_Turkish'...
Listing './lib/python3.5/site-packages/artagger/SCRDRlearner'...
Compiling './lib/python3.5/site-packages/artagger/SCRDRlearner/Node.py'...
Compiling './lib/python3.5/site-packages/artagger/SCRDRlearner/Object.py'...
Compiling './lib/python3.5/site-packages/artagger/SCRDRlearner/SCRDRTree.py'...
Compiling './lib/python3.5/site-packages/artagger/SCRDRlearner/SCRDRTreeLearner.py'...
***   File "./lib/python3.5/site-packages/artagger/SCRDRlearner/SCRDRTreeLearner.py", line 262
    print "\n===> Building exception rules for tag %s" % initializedTag
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/artagger/SCRDRlearner/__init__.py'...
Listing './lib/python3.5/site-packages/artagger/Utility'...
Compiling './lib/python3.5/site-packages/artagger/Utility/Eval.py'...
***   File "./lib/python3.5/site-packages/artagger/Utility/Eval.py", line 16
    print "The numbers of word tokens in %s and %s are not equal!" % (goldStandardCorpus, taggedCorpus)
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/artagger/Utility/LexiconCreator.py'...
***   File "./lib/python3.5/site-packages/artagger/Utility/LexiconCreator.py", line 25
    print "The second parameter gets 'full' or 'short' string-value!"
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/artagger/Utility/Utils.py'...
Compiling './lib/python3.5/site-packages/artagger/Utility/__init__.py'...
Listing './lib/python3.5/site-packages/artagger-0.1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
